impv navbar style

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,10 +1,9 @@
 :root {
   --navbarHeight: 70px;
   --navbarBackground: #ffffff;
-  --sidebarWidth: 45vw;
-  --linkHoverColor: #ad6a83;
+  --sidebarWidth: 40vw;
+  --linkHoverColor: rgba(19, 96, 211, 1);
 }
-
 ul {
   padding: 0;
   margin: 0;
@@ -26,7 +25,7 @@ a {
   justify-content: space-between;
   overflow: hidden;
   transition: background-color 0.25s;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.8rem;
 
   & * {
     font-size: 1.1rem;
@@ -40,12 +39,12 @@ a {
 }
 
 .navbar__logo {
-  width: 80%;
+  width: 100%;
   height: var(--navbarHeight);
   overflow: hidden;
 
   & img {
-    width: 100%;
+    width: 80%;
     height: 100%;
     object-fit: contain;
   }
@@ -68,16 +67,18 @@ a {
 
   & a {
     color: #000;
+    transition: all 0.1s;
   }
   &:hover {
-    background: var(--linkHoverColor);
     cursor: pointer;
   }
 }
 .navbar__link:hover a {
-  color: #000;
+  color: var(--linkHoverColor);
+  transform: scale(1.2);
 }
 #navbar__reserve-btn {
+  position: relative;
   padding: 8px 2px;
   border-radius: 10px;
   width: 140px;
@@ -86,6 +87,9 @@ a {
   place-content: center;
   color: #fff;
   font-weight: 600;
+  overflow: hidden;
+  transition: all 0.15s;
+  z-index: 10; /* testing this */
   background: linear-gradient(
     90deg,
     rgba(242, 242, 242, 1) 0%,
@@ -96,6 +100,41 @@ a {
   box-shadow: 2px 4px 4px 1px rgba(77, 77, 77, 0.75);
   -webkit-box-shadow: 2px 4px 4px 1px rgba(77, 77, 77, 0.75);
   -moz-box-shadow: 2px 4px 4px 1px rgba(77, 77, 77, 0.75);
+
+  /* &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    z-index: -2;
+  } */
+
+  &:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 0%;
+    height: 100%;
+    background: linear-gradient(
+      90deg,
+      rgba(242, 242, 242, 1) 0%,
+      rgba(160, 212, 241, 1) 0%,
+      rgba(19, 96, 211, 1) 0%
+    );
+    border-radius: 10px;
+    z-index: -1;
+    transition: all 0.15s;
+  }
+
+  &:hover {
+    &:before {
+      width: 100%;
+    }
+  }
 }
 
 .navbar.sticky {
@@ -105,6 +144,9 @@ a {
   top: 0;
   left: 0;
   right: 0;
+  box-shadow: 0px 2px 4px 1px rgba(105, 98, 98, 1);
+  -webkit-box-shadow: 0px 2px 4px 1px rgba(105, 98, 98, 1);
+  -moz-box-shadow: 0px 2px 4px 1px rgba(105, 98, 98, 1);
 }
 
 #navbar__toggler {
@@ -131,7 +173,7 @@ a {
 }
 
 /* RESPONSIVE */
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 890px) {
   .navbar #navbar__toggler {
     opacity: 1;
     position: absolute;
@@ -160,15 +202,31 @@ a {
     margin: 3px 0;
     transition: all 0.1s;
   }
+  #navbar__toggler:hover > * {
+    background: rgb(186, 186, 186);
+  }
   .navbar__links {
     position: fixed;
-    background: #080808;
+    background: #000;
     z-index: 40;
     top: 0;
     left: -100%;
     flex-direction: column;
     width: var(--sidebarWidth);
     height: 100vh;
+    gap: 5px;
+
+    & .navbar__link {
+      width: 100%;
+      padding: 0;
+
+      & a {
+        color: #fff;
+      }
+    }
+    & #navbar__reserve-btn {
+      margin-top: 20px;
+    }
   }
   .navbar__link:first-child {
     margin-top: 80px;
@@ -180,8 +238,12 @@ a {
   .navbar.collapsed {
     /* for X transition */
     & #navbar__toggler > * {
-      background: #fff !important;
+      background: #fff;
     }
+    & #navbar__toggler:hover > * {
+      background: rgb(186, 186, 186);
+    }
+
     & #navbar__toggler {
       & .line1 {
         transform: translateY(9px) rotate(-45deg);
@@ -196,17 +258,10 @@ a {
 
     & .navbar__links {
       left: 0;
-    }
-    & .navbar__link {
-      width: 100%;
-      padding: 0;
-
-      & a {
-        color: #fff;
-      }
+      min-width: 300px;
     }
     & .navbar__link:hover a {
-      color: var(--secondary-color);
+      color: var(--linkHoverColor);
     }
 
     & #navbar__toggler {
