--- a/src/components/MainInfo/styles.css
+++ b/src/components/MainInfo/styles.css
@@ -1,42 +1,117 @@
-main.main {
+:root {
+  --tercerary-color: #33a2e0;
+}
+
+/* Main section */
+.main {
+  position: relative;
+
+  /* TA CHOCLON */
+  overflow-y: auto;
+}
+.main__background {
   position: absolute;
-  top: var(--navbarHeight);
-  left: 0;
-  margin: 1rem 2rem;
+  background-size: cover;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  filter: grayscale(100%);
+  opacity: 0.18;
+}
+
+.main__content {
+  margin: calc(var(--navbarHeight) + 1rem) 2rem 0 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: flex-start;
-
-  & h1,
-  h2 {
-    margin: 0;
-  }
 }
-
-.main .left {
+.main__left {
+  padding-top: 4rem;
+  /* provisional */
 }
-.main .right {
+.main__right {
   height: 500px;
   overflow: hidden;
   display: flex;
   justify-content: end;
+  align-items: end;
 
-  & img {
+  & .main__img {
     height: 100%;
     object-fit: cover;
   }
 }
 
-.main__title {
+.title__color {
   & * {
     font-size: 2rem;
+    font-weight: 400;
+    margin: 0;
   }
   & .primary {
     color: var(--linkHoverColor);
     font-size: 2.2rem;
+    font-weight: bold;
   }
 }
-.main__info {
+.main__info * {
   font-size: 1.05rem;
+}
+.main__extra {
+  margin: 3rem 0 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 30px;
+}
+.main__schedule {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 1rem 1.8rem;
+
+  box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.26);
+  -webkit-box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.26);
+  -moz-box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.26);
+
+  & * {
+    margin: 0.1rem;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  & i {
+    grid-row: span 2;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    font-size: 40px;
+    font-weight: bold;
+    color: var(--tercerary-color);
+  }
+  & .primary {
+    color: var(--tercerary-color);
+    font-weight: bold;
+  }
+  & .secondary {
+    color: #686868;
+  }
+}
+
+/* About section */
+.about {
+  margin: 4rem 0;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+}
+.about__title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
