--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -7,7 +7,11 @@
 
 /* Navbar */
 .navbar {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-color: transparent;
   color: #fff;
   padding: 0 2rem;
@@ -18,6 +22,7 @@
   overflow: hidden;
   transition: background-color 0.25s;
   margin-bottom: 0.8rem;
+  z-index: 10;
 
   & ul {
     padding: 0;
@@ -25,7 +30,6 @@
   }
   & a {
     text-decoration: none;
-    color: #000;
   }
   & * {
     font-size: 1.1rem;
@@ -79,65 +83,7 @@
     }
   }
 }
-#navbar__reserve {
-  position: relative;
-  padding: 8px 2px;
-  border-radius: 10px;
-  width: 140px;
-  display: grid;
-  border: none;
-  place-content: center;
-  color: #fff;
-  font-weight: 600;
-  overflow: hidden;
-  transition: all 0.15s;
-  z-index: 10; /* testing this */
-  background: linear-gradient(
-    90deg,
-    rgba(242, 242, 242, 1) 0%,
-    rgba(160, 212, 241, 1) 0%,
-    rgba(19, 96, 211, 1) 100%
-  );
 
-  box-shadow: 2px 4px 4px 1px rgba(77, 77, 77, 0.75);
-  -webkit-box-shadow: 2px 4px 4px 1px rgba(77, 77, 77, 0.75);
-  -moz-box-shadow: 2px 4px 4px 1px rgba(77, 77, 77, 0.75);
-
-  /* &:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    z-index: -2;
-  } */
-
-  &:before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 0%;
-    height: 100%;
-    background: linear-gradient(
-      90deg,
-      rgba(242, 242, 242, 1) 0%,
-      rgba(160, 212, 241, 1) 0%,
-      rgba(19, 96, 211, 1) 0%
-    );
-    border-radius: 10px;
-    z-index: -1;
-    transition: all 0.15s;
-  }
-
-  &:hover {
-    &:before {
-      width: 100%;
-    }
-  }
-}
 
 .navbar.navbar--sticky {
   background-color: var(--navbarBackground);
@@ -231,9 +177,6 @@
   }
   .navbar__left {
     display: none;
-  }
-  #navbar__reserve-btn {
-    margin-top: 20px;
   }
 
   .navbar.collapsed {
